ウィンドウの入れ替えショートカットを追加

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,8 @@ bind C-n next-window
 bind C-p previous-window
 bind C-l select-pane -t :.+
 bind C-c new-window
+bind C-h swap-window -t -1\; select-window -t -1
+bind C-l swap-window -t +1\; select-window -t +1
 
 # マウス操作を有効にする
 # setw -g mouse on
